# slayyyter-tickets

./: .gitignore  README.md  SETUP.md  config.yaml  pyproject.toml
.github/workflows/: poll.yml
data/: alerts.json  latest.json  prices.ndjson
monitor/: alerts.py  bootstrap.py  config.py  notify.py  poll.py  storage.py
monitor/sources/: base.py  etc_scraper.py  seatgeek.py  ticketmaster.py  vivid_seats.py
monitor/tests/: test_alerts.py  test_bootstrap.py  test_notify.py  test_sources.py  test_storage_and_poll.py
