[project]
name = "slayyyter-tickets"
version = "0.1.0"
description = "Resale price monitor for Slayyyter @ The Regency Ballroom"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["monitor*"]

[tool.pytest.ini_options]
testpaths = ["monitor/tests"]
